@@ -50,5 +50,27 @@ class RecipeTest < Test::Unit::TestCase
     )
     assert !recipe.valid?
   end
+
+  def test_validate_invalid_syntax_on_create
+    recipe = Recipe.create(:name => "Copy Config files",
+                           :description => "Recipe body intentionally erronous",
+                           :body => "set config_files, database.yml'")
+    assert !recipe.valid?
+    assert_equal "syntax error at line: 1", recipe.errors.on(:body)
+  end
   
+  def test_validate_valid_syntax_on_create
+    recipe = Recipe.create(:name => "Copy Config files",
+                           :description => "Recipe body intentionally erronous",
+                           :body => "set :config_files, 'database.yml'")
+    assert !recipe.errors.on(:body)
+  end
+  
+  def test_validate_with_open4_error
+    Open4.expects(:popen4).raises(RuntimeError)
+    recipe = Recipe.create(:name => "Copy Config files",
+                           :description => "Recipe body intentionally erronous",
+                           :body => "set :config_files, 'database.yml'")
+    assert !recipe.errors.on(:body)
+  end
 end
